# legoDSL

./: Compiler.hs  ExampleCode.hs  ExampleVM.hs  LICENSE  NXT.cabal  NXTDSL.cabal  Parser.hs  README.md  lineFollow.js
Examples/: Example.hs  ExampleCode.hs  ExampleVM.hs
NXT/: AttoExpr.hs  AttoParser.hs  CodeGen.hs  Common.hs  Core.hs  Inference.hs  Interpretation.hs  Motor.hs  Parser.hs  RXEParser.hs  Sensor.hs  Types.hs
NXT/Compiler/: Inference.hs
NXT/Parser/: AttoExpr.hs  AttoParser.hs  RXEParser.hs
NXT/StdLib/: Common.hs  Motor.hs  Sensor.hs
NXT/VM/: Interpretation.hs
